<resources>
    <string name="app_name">My App</string>
    <string name="action_settings">设置</string>
    <string name="action_skin">换肤</string>
    <string name="transition_avatar">AvatarTrams</string>
    <string name="title_activity_clip_to_outline">ClipToOutlineActivity</string>
    <string name="microReader">微阅</string>
    <string name="category">Category</string>
    <string name="transition_toolbar">ToolbarTransition</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="reader">阅读类</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- reader_APP -->

    <string name="reader_app_name">Leisure</string>
    <string name="reader_news">News</string>
    <string name="reader_reading">Reading</string>
    <string name="reader_science">Science</string>
    <string name="reader_video">Video</string>
    <string name="reader_music">Music</string>
    <string name="reader_setting">Setting</string>
    <string name="reader_about">About</string>
    <string name="reader_shake">Shake</string>
    <string name="reader_text_ebook">EBook</string>
    <string name="reader_id_pos" translatable="false">position</string>
    <string name="reader_id_url" translatable="false">url</string>
    <string name="reader_id_html_content" translatable="false">content</string>
    <string name="reader_daily">Daily</string>
    <string name="reader_Text_Net_Exception">Network Exception</string>
    <string name="reader_id_book" translatable="false">book</string>
    <string name="reader_text_noinfo">\n\n\n\n\t\t\t\t\t\t\t\t\tSorry,No Message Here</string>
    <string name="reader_text_debug_data">"Debug Data"</string>
    <string name="reader_text_pubdate">"Publish Date "</string>
    <string name="reader_id_pages">"Page "</string>
    <string name="reader_text_price">"Price "</string>
    <string name="reader_text_search">Search</string>
    <string name="reader_id_search_text" translatable="false">search_text</string>
    <string name="reader_text_search_result">Search Result</string>
    <string name="reader_text_ok">OK</string>
    <string name="reader_text_search_books">"  Search Books"</string>
    <string name="reader_id_category" translatable="false">category</string>
    <string name="reader_text_collection">Collection</string>
    <string name="reader_text_refresh_success">Refresh Successfully</string>
    <string name="reader_notify_remove_from_collection">Remove it from collection successful!!</string>
    <string name="reader_id_collection" translatable="false">Collection</string>
    <string name="reader_author_email">MummyDing@outlook.com</string>
    <string name="reader_author_name">MummyDing</string>
    <string name="reader_collection">Collection</string>
    <string name="reader_pages">Page　</string>
    <string name="reader_text_language">Language</string>
    <string name="reader_id_language">language</string>
    <string name="reader_text_preference">Preference</string>
    <string name="reader_text_auto_refresh">Auto Refresh</string>
    <string name="reader_text_auto_refresh_summary">Load data from network automatically if WIFI is connected</string>
    <string name="reader_text_auto_refresh_summary_off">Not Auto Refresh</string>
    <string name="reader_text_night_mode">Night Mode</string>
    <string name="reader_text_shake_to_return">Shake to return</string>
    <string name="reader_text_no_pic_mode">Auto save traffic</string>
    <string name="reader_text_no_pic_mode_summary">Load pictures only if WIFI is connected</string>
    <string name="reader_text_clear_cache">Clear Cache</string>
    <string name="reader_text_clear_cache_summary">Clear Leisure\'s Cache</string>
    <string name="reader_text_network">Network</string>
    <string name="reader_text_remove">Remove</string>
    <string name="reader_text_author">Author</string>

    <string-array name="langs" translatable="false">
        <item>English</item>
        <item>简体中文</item>
    </string-array>

    <string-array name="search">
        <item>@string/reader_text_search_by_keyword</item>
        <item>@string/reader_text_search_by_category</item>
    </string-array>

    <string-array name="swipe_back">
        <item>@string/reader_text_anywhere</item>
        <item>@string/reader_text_left_only</item>
    </string-array>

    <string name="reader_text_search_by_keyword">Search By Keyword</string>
    <string name="reader_text_search_by_category">Search By Category</string>
    reader_
    <string name="reader_text_left_only">Left Only</string>
    <string name="reader_text_anywhere">Anywhere</string>
    reader_
    <string name="reader_text_clear_cache_successful">Cache Clear Successfully!</string>
    <string name="reader_text_exit_confirm">Exit Confirm</string>
    <string name="reader_text_exit_confirm_summary">Press back key twice to exit</string>
    <string name="reader_notify_exit_confirm">press again to exit</string>
    <string name="reader_text_current_version">Current Version</string>
    <string name="reader_text_share_leisure">Share Leisure</string>
    <string name="reader_text_check_update">Check Update</string>
    <string name="reader_text_good_job">Good Job</string>
    <string name="reader_text_good_job_summary">Give me a star at https://github.com/MummyDing/Leisure</string>
    <string name="reader_text_blog">Blog</string>
    <string name="reader_author_blog">http://blog.csdn.net/mummyding</string>
    <string name="reader_text_author_github">Author GitHub</string>
    <string name="reader_author_github">https://github.com/MummyDing</string>
    <string name="reader_text_copyright">Copyright</string>
    <string name="reader_text_data">Data</string>
    <string name="reader_text_email">E-Mail</string>
    <string name="reader_text_data_summary">The data are from public API,all rights belong to original author</string>
    <string name="reader_text_attention">Attention</string>
    <string name="reader_text_attention_summary">This app is not allowed for COMMERCIAL Purposes</string>
    <string name="reader_text_license">License</string>
    <string name="reader_leisure_version">Leisure Version 2.1</string>
    <string name="reader_notify_current_is_latest">Current Version is the latest Version</string>
    <string name="reader_notify_find_new_version">"Find new Version "</string>
    <string name="reader_notif_info_copied">Info copied to Clipboard! You can paste it to an edit area</string>
    <string name="reader_project_url">https://github.com/MummyDing/Leisure/</string>
    <string name="reader_text_share_info">Welcome to use Leisure,it contains Zhihu Daily,Guokr Scientific,XinhuaNet News and Douban Books.You can download it at http://coolapk.com/apk/com.mummyding.app.leisure</string>
    <string name="reader_text_demo_video">Demo Video</string>
    <string name="reader_text_app_intro">App Introduction</string>
    <string name="reader_id_title">title</string>
    <string name="reader_id_body">body</string>
    <string name="reader_id_imageurl">imageUrl</string>
    <string name="reader_id_id">id</string>
    <string name="reader_hint_share_to">Share to...</string>
    <string name="reader_share">share</string>
    <string name="reader_text_share_from">"share from "</string>
    <string name="reader_notify_add_to_collection">add to collection successful</string>
    <string name="reader_id_small_image">id_small_image</string>
    <string name="reader_id_science">id_science</string>
    <string name="reader_text_hot"> hot </string>
    <string name="reader_id_swipe_back">swipe_back</string>
    <string name="reader_text_swipe_to_return">Swipe to Return</string>
    <string name="reader_text_day_mode">Day Mode</string>
    <string name="reader_hint_fail_check_update">Fail to get version info,please check your network setting</string>
    <string name="reader_loading">Please wait while loading...</string>
    <string name="reader_about_app">about this App</string>
    <string name="shop">电商类</string>
    <string name="news">新闻类</string>
    <string name="video">视频类</string>
    <string name="qq">社交类</string>
    <string name="music">音乐类</string>


</resources>
